# MazeII

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SECURITY_ANALYSIS_REPORT.md  SECURITY_README.md  SECURITY_SUMMARY.md
.github/: codeql-config.yml  copilot-instructions.md
.github/scripts/: create-issues-from-alerts.sh
.github/workflows/: README.md  codeql.yml
cmake/: CompilerWarnings.cmake  LoadCLI11.cmake  LoadEnTT.cmake  LoadFreetype.cmake  LoadGLFW.cmake  LoadGLM.cmake  LoadGLSLC.cmake  LoadOpenAL.cmake  LoadSpdlog.cmake  LoadVulkan.cmake  Optimizations.cmake  SimdSupport.cmake  TargetAssets.cmake
src/: CMakeLists.txt
src/ext/: CMakeLists.txt  StbImage.cpp  StbVorbis.cpp  StbVorbis.hpp
src/maze/: CMakeLists.txt  Enemies.cpp  Enemies.hpp  EnemyHandler.cpp  EnemyHandler.hpp  Explosions.cpp  Explosions.hpp  GameStage.cpp  GameStage.hpp  Level.cpp  Level.hpp  Main.cpp  MazeAssets.hpp.in  MazeComponents.hpp  MazeDelegate.cpp  MazeDelegate.hpp  Pch.hpp  Shots.cpp  Shots.hpp  ShotsHandler.cpp  ShotsHandler.hpp
src/ngn/: Allocators.cpp  Allocators.hpp  Application.cpp  Application.hpp  Assets.hpp.in  CMakeLists.txt  CommonComponents.hpp  Input.hpp  Instrumentation.cpp  Instrumentation.hpp  Logging.cpp  Logging.hpp  Macros.hpp  Math.cpp  Math.hpp  Pch.hpp  Timer.cpp  Timer.hpp  Types.hpp
src/ngn/assets/shader/: Debug.frag  Debug.vert  Sprite.frag  Sprite.geom  Sprite.vert
src/ngn/audio/: Audio.cpp  Audio.hpp  AudioBuffer.cpp  AudioBuffer.hpp  Sound.cpp  Sound.hpp
src/ngn/gfx/: Buffer.cpp  Buffer.hpp  Colors.cpp  Colors.hpp  CommandBuffer.cpp  CommandBuffer.hpp  DebugPipeline.cpp  DebugPipeline.hpp  DebugRenderer.cpp  DebugRenderer.hpp  FontCollection.cpp  FontCollection.hpp  FontMaker.cpp  FontMaker.hpp  FontRenderer.cpp  FontRenderer.hpp  GFXComponents.hpp  Image.cpp  Image.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  SpriteAnimation.hpp  SpriteAnimator.cpp  SpriteAnimator.hpp  SpritePipeline.cpp  SpritePipeline.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  UiRenderer.cpp  UiRenderer.hpp  Uniforms.hpp
src/ngn/phys/: Collision.hpp  CollisionTests.cpp  CollisionTests.hpp  DynamicTree.cpp  DynamicTree.hpp  Functions.cpp  Functions.hpp  IntersectionTests.cpp  IntersectionTests.hpp  PhysComponents.hpp  SATDetector.cpp  SATDetector.hpp  Shapes.cpp  Shapes.hpp  Solver.cpp  Solver.hpp  World.cpp  World.hpp
src/ngn/util/: Vector.hpp
src/ngn/utils/: StaticVector.hpp
src/testbed/: CMakeLists.txt  Main.cpp  TestBedAssets.hpp.in  TestBedDelegate.cpp  TestBedDelegate.hpp  TestBedStage.cpp  TestBedStage.hpp
utils/: CMakeLists.txt
utils/assetc/: AssetCompiler.cpp  AssetCompiler.h  CMakeLists.txt  Helper.cpp  Helper.h  Main.cpp
